# invertedPhoto

./: .gitignore  CMakeLists.txt  DEFENSE.docx  DEFENSE.md  README.md  main.cpp
.github/workflows/: ci.yml
include/: image.hpp  inverter.hpp  logger.hpp
scripts/: make_sample.py  verify_roundtrip.py
src/: image.cpp  inverter.cpp  logger.cpp  stb_impl.cpp
